# log-analyzer

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.sh  configure.sh  herzlich_config.h.in  install.sh  loganalyzer.slnx  loganalyzer.vcxproj  loganalyzer.vcxproj.filters  main.cpp  run.sh
.github/workflows/: build.yml
Adder/: CMakeLists.txt  adder.cpp  adder.h
_CPack_Packages/win64/NSIS/: NSIS.InstallOptions.ini  project.nsi
include/: LogAnalyzer.h
packaging/: installer.nsi
src/: LogAnalyzer.cpp  main.cpp
tests/: test_log_analyzer.cpp
